# froot

./: .clang-format  .editorconfig  .gitignore  Dockerfile  Makefile  PKGBUILD  README.ja  README.txt  autogen.sh  check.py  configure.ac  froot  local.h  main.c  man.1
docs/: __doc.cc
man/man1/: man.1
scripts/: check_gcc.pl
